--- a/web215/components/header.html
+++ b/web215/components/header.html
@@ -1,6 +1,6 @@
 	<header>
-		<a href="images/logo.jpg">
-		<img src="images/logo.jpg" width="400" alt="360 logo" >
+		<a href="images/logo.png">
+		<img src="images/logo.png" width="250" alt="150 logo" >
 		</a>
 		<nav>
 			<a href="index.html">Home</a> /
