--- a/web215/components/header.html
+++ b/web215/components/header.html
@@ -1,6 +1,6 @@
 	<header>
 		<a href="images/logo.png">
-		<img src="images/logo.png" width="250" alt="150 logo" >
+		<img src="images/logo.png" width="150" alt="Laura Rios Records Management logo" >
 		</a>
 		<nav>
 			<a href="index.html">Home</a> /
