--- a/web215/components/header.html
+++ b/web215/components/header.html
@@ -1,7 +1,10 @@
 	<header>
-		<a href="images/logo.png">
-		<img src="images/logo.png" width="150" alt="Laura Rios Records Management logo" >
-		</a>
+		<h1>
+			<a href="index.html">
+				<img src="images/logo.png" width="150" alt="Laura Rios Records Management logo">
+			</a>
+			WEB215 // Laura Rios Records Management
+		</h1>
 		<nav>
 			<a href="index.html">Home</a> /
 			<a href="contract.html">Contract</a> /
